.tanzu/config/k8sGatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: spring-music-scg-route
spec:
  parentRefs:
    - group: networking.tanzu.vmware.com
      kind: Entrypoint
      name: main
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: spring-cloud-gateway
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
